--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ Gemfile.lock
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+# Ignore application configuration
+/config/application.yml
